# 1920engineprogramming

./: .gitignore  CMakeLists.txt  README.md
src/pastaengine/: 2dRenderer.cpp  2dRenderer.h  3dRenderer.cpp  3dRenderer.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Screen.h  TriangleRenderer.cpp  TriangleRenderer.h  dummy.cpp  pasta.cpp  pasta.h
src/rend/: Shader.cpp
src/sandbox/: main.cpp  tempComponent.cpp  tempComponent.h
